--- a/.github/workflows/techtalk.yml
+++ b/.github/workflows/techtalk.yml
@@ -28,7 +28,7 @@ jobs:
           certificate-ttl: 1h
 
       - name: List nodes
-        run: tsh ls
+        run: tsh -i ${{ steps.auth.outputs.identity-file }} ls
 
       - name: Check for updates
-        run: tsh ls | grep rpi | awk '{print $1}' | while read node; do echo "Checking ${node} for package updates:"; tsh ssh root@${node} apt update; done
+        run: tsh -i ${{ steps.auth.outputs.identity-file }} ls | grep rpi | awk '{print $1}' | while read node; do echo "Checking ${node} for package updates:"; tsh -i ${{ steps.auth.outputs.identity-file }} ssh root@${node} apt update; done
