--- a/.github/workflows/techtalk.yml
+++ b/.github/workflows/techtalk.yml
@@ -31,10 +31,10 @@ jobs:
         run: tsh -i ${{ steps.auth.outputs.identity-file }} ls
 
       - name: Check uptime
-        run: tsh -i ${{ steps.auth.outputs.identity-file }} root@qnapvm.home uptime
+        run: tsh -i ${{ steps.auth.outputs.identity-file }} ssh root@qnapvm.home uptime
 
       - name: Check for updates
-        run: tsh -i ${{ steps.auth.outputs.identity-file }} root@qnapvm.home yum check-update
+        run: tsh -i ${{ steps.auth.outputs.identity-file }} ssh root@qnapvm.home yum check-update
 
   k8s_access:
     permissions:
